# sf-mod-app

./: .clang-format  .gitignore  CLION.md  CMakeLists.txt  CMakePresets.json  README.md  build.sh  check-format.sh  cross-windows-fix.sh  designer-plugins.sh  docker-build.sh  packages-c++2a-install.txt  set-releative-rpath.sh  wine-exec.sh
app/ami/: Application.cpp  Application.h  ApplicationPropertyPage.cpp  ApplicationPropertyPage.h  ApplicationPropertyPage.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindowPropertyPage.cpp  MainWindowPropertyPage.h  MainWindowPropertyPage.ui  main.cpp
app/ami/res/: windows.rc
com/: CMakeLists.txt  config.cmake
com/ami/: CMakeLists.txt
com/ami/editor/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CodeEditorAppModule.cpp  CodeEditorAppModule.h  CodeEditorConfiguration.cpp  CodeEditorConfiguration.h  CodeEditorPropertyPage.cpp  CodeEditorPropertyPage.h  CodeEditorPropertyPage.ui  EditorAppModule.cpp  EditorAppModule.h  Highlighter.cpp  Highlighter.h  JsHighlighter.cpp  JsHighlighter.h  TextEditor.cpp  TextEditor.h  TextEditorAppModule.cpp  TextEditorAppModule.h
com/ami/iface/: AppModuleActions.h  AppModuleFileType.cpp  AppModuleInterface.cpp  AppModuleInterface.h  CMakeLists.txt  ModuleSelectionDialog.cpp  ModuleSelectionDialog.h  ModuleSelectionDialog.ui  MultiDocInterface.cpp  MultiDocInterface.h  PlainTextEditMdi.cpp  (+5 more)
com/cmake/: Build.sh  Compiler.cmake  QtLibDir.sh  SfAmiConfig.cmake  SfBaseConfig.cmake  SfCatch2Config.cmake  SfCommonInc.cmake  SfCompilerConfig.cmake  SfGiiConfig.cmake  SfGscConfig.cmake  SfLinuxToolChain.cmake  SfMacrosConfig.cmake  SfMiscConfig.cmake  SfPalConfig.cmake  SfRsaConfig.cmake  SfToolChainConfig.cmake  SfToolChainCrossWindows.cmake  SfToolChainLinux.cmake  SfWindowsToolChain.cmake
com/doc/: Images.odg
com/gii/: CMakeLists.txt  InformationBase.h  LibMain.cpp  UnitConversion.cpp  UnitConversion.h  Variable.cpp  Variable.h  Variable.md  VariableBase.cpp  VariableBase.h  VariableTypes.cpp  VariableTypes.h  global.h
com/globalshortcut/: CMakeLists.txt  QxtGlobalShortcut.cpp  QxtGlobalShortcut.h  QxtGlobalShortcutPrivate.h  QxtGlobalShortcut_mac.cpp  QxtGlobalShortcut_win.cpp  QxtGlobalShortcut_x11.cpp
com/gsc/: CMakeLists.txt  GlobalShortcut.cpp  GlobalShortcutPrivate.h  GlobalShortcut_x11.cpp  global.h
com/ipj/: CMakeLists.txt  IniProfileSettings.cpp  ProjectConfig.cpp  global.h  ipj
com/misc/: CMakeLists.txt  arith.cpp  arith.h  capturelistmodel.cpp  capturelistmodel.h  class_reg.cpp  class_reg.h  closure.h  csf.cpp  csf.h  dbgutils.cpp  dbgutils.h  defs.h  dynamicbuffer.h  exception.cpp  exception.h  fifoclass.h  formwriter.cpp  formwriter.h  genutils.cpp  genutils.h  global.h  linebuffer.cpp  linebuffer.h  mcvector.h  objectextension.cpp  objectextension.h  profile.cpp  profile.h  qcapturelistmodel.cpp  qcapturelistmodel.h  qformwriter.cpp  qformwriter.h  qresource.cpp  qresource.h  qt_utils.cpp  qt_utils.h  range.cpp  range.h  regobj.h  (+4 more)
com/pal/: CMakeLists.txt
com/rsa/: CMakeLists.txt
com/sto/: CMakeLists.txt
com/test/: CMakeLists.txt
com/tests/: CMakeLists.txt  test-closure.cpp  test-genutils.cpp  test-mcvector.cpp  test-range.cpp  test-value.cpp  test-variable.cpp  test-vector.cpp
com/wgt/: CMakeLists.txt
concept/: CMakeLists.txt
concept/custom-ui-plugin/: CMakeLists.txt  SfAnalogClock.cpp  SfAnalogClock.h  SfAnalogClockPlugin.cpp  SfAnalogClockPlugin.h  SfCustomWidgets.h  SfPushButton.cpp  SfPushButton.h  SfPushButtonPlugin.cpp  SfPushButtonPlugin.h
concept/delegates/: CMakeLists.txt  ComboBoxDelegate.h  ScriptItemDelegate.cpp  SpinBoxDelegate.cpp  SpinBoxDelegate.h  main.cpp  stardelegate.cpp  stardelegate.h  stareditor.cpp  stareditor.h  starrating.cpp  starrating.h
concept/dock-widgets/: CMakeLists.txt  dockwidgets.qrc  main.cpp  mainwindow.cpp  mainwindow.h
concept/multi-docs/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  Highlighter.cpp  MainWindow.cpp  MainWindow.h  MdiChild.cpp  MdiChild.h  TextEditor.cpp  TextEditor.h  main.cpp
concept/rt-shared-lib/: CMakeLists.txt
concept/rt-ui-serialize/: CMakeLists.txt  FormDialog.cpp  FormDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
concept/script-engine/: CMakeLists.txt
concept/task-menu/: CMakeLists.txt  README.md  TicTacToe.cpp  TicTacToeDialog.cpp  TicTacToeDialog.h  TicTacToePlugin.cpp  TicTacToePlugin.h  TicTacToeTaskMenu.cpp  TicTacToeTaskMenu.h
concept/treemodel/: CMakeLists.txt  main.cpp  treemodel.cpp  treemodel.h
concept/unit-test/: CMakeLists.txt
custom-ui-plugin/: CMakeLists.txt  README.md  config.cmake  libraries.cmake
custom-ui-plugin/src/: SfAnalogClock.cpp  SfAnalogClock.h  SfAnalogClockPlugin.cpp  SfAnalogClockPlugin.h  SfCustomWidgets.cpp  SfCustomWidgets.h  SfPushButton.cpp  SfPushButton.h  SfPushButtonPlugin.cpp  SfPushButtonPlugin.h  customwidgetplugin.cpp  customwidgetplugin.h
doc/: CLION.md  CMakeLists.txt  hierarchy.puml  mainpage.md
multi-docs/: CMakeLists.txt  README.md  libraries.cmake
multi-docs/src/: CodeEditor.cpp  CodeEditor.h  Highlighter.h  MainWindow.cpp  MainWindow.h  MdiChild.h  TextEditor.cpp  TextEditor.h  highlighter.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h
rt-shared-lib/: CMakeLists.txt  README.md  build.sh  config.cmake  libraries.cmake  rt-shared-lib.cmake
rt-shared-lib/app/: .clang-format  CMakeLists.txt  build.sh  clean-build.sh  configure.sh
rt-shared-lib/iface/: CMakeLists.txt  rt-iface.cpp
rt-shared-lib/impl-a/: CMakeLists.txt  rt-lib-impl-a.cpp
rt-shared-lib/impl-b/: CMakeLists.txt
rt-ui-serialize/: CMakeLists.txt  README.md  config.cmake
rt-ui-serialize/src/: FormDialog.h  MainWindow.cpp  MainWindow.ui  formdialog.cpp  formdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qformdialog.cpp  qformdialog.h  widgets.h
script-engine/: CMakeLists.txt  README.md
script-engine/as/: CMakeLists.txt  config.cmake
script-engine/qjs/: CMakeLists.txt  config.cmake  libraries.cmake
src/com/: CMakeLists.txt
unit-test/catch2/: CMakeLists.txt  README.md  libraries.cmake
(+848 files in other folders)
